--- a/lms/templates/discussion/index.html
+++ b/lms/templates/discussion/index.html
@@ -1,4 +1,5 @@
 <%! import django_comment_client.helpers as helpers %>
+<%! from django.template.defaultfilters import escapejs %>
 <%inherit file="../main.html" />
 <%namespace name='static' file='../static_content.html'/>
 <%block name="bodyclass">discussion</%block>
@@ -12,55 +13,35 @@
 <%block name="js_extra">
 <%include file="_js_body_dependencies.html" />
 <%static:js group='discussion'/>
+<script>
+    $$contents = {};
+    $$discussions = {};
+    $$course_id = "${course_id}";
+    DiscussionApp = {
+        start: function() {
+            window.user = new DiscussionUser(JSON.parse("${user_info | escapejs}"));
+            var discussion = new Discussion(JSON.parse("${threads | escapejs}"));
+
+            new DiscussionRouter({discussion: discussion});
+            Backbone.history.start({pushState: true, root: "/courses/${course_id}/discussion/forum/"});
+        }
+    }
+    $(document).ready(function() {
+        DiscussionApp.start();
+    });
+</script>
 </%block>
 
 <%include file="../courseware/course_navigation.html" args="active_page='discussion'" />
 
-
-<section class="container">
-  <div class="discussion-wrapper">
-    <article class="discussion-sidebar">
-      <div class="board-selector">
-        <a href="#" class="board-drop-btn">Homework / Week 1 <span class="drop-arrow">▾</span></a>
-        <div class="board-drop-menu">
-        </div>
-      </div>
-      <div class="sort-bar">
-<a href="#"><span class="sort-label">Sort by:</span> most recent <span class="drop-arrow">▾</span></a>
-      </div>
-      <div class="post-list-wrapper">
-        <ul class="post-list">
-          % for thread in threads:
-          <li><a href="${helpers.permalink(thread) | h}"><span class="title">${thread['title'] | h}</span> <span class="comments">${thread['comments_count'] | h}</span><span class="votes">+${thread['votes']['up_count'] | h}</span></a></li>
-          % endfor
-        </ul>
-      </div>
-    </article>
-    <section class="discussion-content">
-      This page intentionally left blank
-    </section>
-  </div>
+<%include file="_new_discussion_templates.html" />
+<script type="text/javascript" src="${static.url('js/discussions-temp.js')}"></script>
 
 </section>
 
-<section class="container">
-  <div class="course-wrapper">
-    <section aria-label="Course Navigation" class="course-index">
-      <nav>
-
-        <article class="sidebar-module discussion-sidebar">
-          <a href="#" class="sidebar-new-post-button">New Post</a>
-        </article>
-
-        <%include file="_recent_active_posts.html" />
-
-        <%include file="_trending_tags.html" />
-
-      </nav>
-    </section>
-
-    <section class="course-content">
-      ${content.decode('utf-8')}
-    </section>
-  </div>
-</section>
+<div class="discussion container">
+    <div class="discussion-body">
+        <div class="sidebar"></div>
+        <div class="discussion-column"></div>
+    </div>
+</div>
