--- a/lms/templates/discussion/_underscore_templates.html
+++ b/lms/templates/discussion/_underscore_templates.html
@@ -13,8 +13,15 @@
             <div class="post-body">
                 ${'<%- body %>'}
             </div>
-            <div class="post-status-closed" style="display: none">
-              This thread is closed.
+            ${'<% if (obj.courseware_location) { %>'}
+            <div class="post-context">
+                (this post is about <a href="../../jump_to/${'<%- courseware_location %>'}">${'<%- courseware_title %>'}</a>)
+            </div>
+            ${'<% } %>'}
+            <div class="post-status">
+              ${'<% if (closed) { %>'}
+                This thread is closed.
+              ${'<% } %>'}
             </div>
             <ul class="moderator-actions">
                 <li style="display: none"><a class="action-edit" href="javascript:void(0)"><span class="edit-icon"></span> Edit</a></li>
