--- a/lms/templates/discussion/_filter_dropdown.html
+++ b/lms/templates/discussion/_filter_dropdown.html
@@ -30,7 +30,7 @@
     <ul class="browse-topic-drop-menu">        
         <li>
             <a href="#">
-                <span class="board-name" data-discussion_id='#all'>All</span> <span class="unread">1,248</span>
+                <span class="board-name" data-discussion_id='#all'>All</span>
             </a>
         </li>
         ${render_dropdown(category_map)}
