--- a/cms/templates/course_index.html
+++ b/cms/templates/course_index.html
@@ -3,12 +3,10 @@
 <%include file="widgets/header.html"/>
 
 <%block name="content">
-<section class="main-container">
+<section class="main-container" data-course-id="${course_id}">
 
-  <%include file="widgets/navigation.html"/>
-
-  <section class="main-content">
-  </section>
+  <section class="navigation"></section>
+  <section class="main-content"></section>
 
 </section>
 </%block>
