--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -53,7 +53,7 @@ section.problem {
       float: left;
       border-left: 1px solid #ddd;
       padding-left: 20px;
-      margin: 20px 0;
+      margin: 0px 0 20px;
     }
 
     input[type="radio"],
