fixed collapsible after check bug

--- a/lms/templates/problem.html
+++ b/lms/templates/problem.html
@@ -42,6 +42,7 @@
       $('.shortform').append('<a href="#" class="full">See full output</a>');
 
       $('.collapsible section').hide();
+
       $('.full').click(function() {
         $(this).parent().siblings().slideToggle();
         $(this).parent().parent().toggleClass('open');
@@ -51,6 +52,7 @@
       });
 
       function toggleHint(e) {
+        e.preventDefault();
         $(this).parent().siblings().slideToggle();
         $(this).parent().parent().toggleClass('open');
         return false;
@@ -58,7 +60,7 @@
 
       if(!collapsibleSet) {
         collapsibleSet = true;
-        $('.collapsible header a').bind('click', toggleHint);
+        $('body').delegate('.collapsible header a', 'click', toggleHint);
       }      
     });
 </script>
