--- a/lms/templates/discussion/single_thread.html
+++ b/lms/templates/discussion/single_thread.html
@@ -2,6 +2,7 @@
 <%! from django.template.defaultfilters import escapejs %>
 <%! from django.core.urlresolvers import reverse %>
 <%! from courseware.access import has_access %>
+<%! import json %>
 
 <%inherit file="../main.html" />
 <%namespace name='static' file='../static_content.html'/>
@@ -23,7 +24,7 @@
 
 <%include file="_new_post.html" />
 
-<section class="discussion container" id="discussion-container" data-roles="${roles}" data-course-id="${course_id}" data-user-info="${user_info}" data-threads="${threads}" data-content-info="${annotated_content_info}" data-thread-pages="${thread_pages}">
+<section class="discussion container" id="discussion-container" data-roles="${json.dumps(roles) | entity}" data-course-id="${course.id}" data-user-info="${json.dumps(user_info) | entity}" data-threads="${json.dumps(threads) | entity}" data-content-info="${json.dumps(annotated_content_info)|entity}" data-thread-pages="${num_pages}">
   <div class="discussion-body">
     <div class="sidebar"></div>
     <div class="discussion-column"></div>
