Style for capa subheading

--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -9,6 +9,11 @@ h2 {
     }
   }
 
+  &.problem-part {
+    font-size: 0.875em;
+    font-weight: bold;
+  }
+
   @media print {
     display: block;
     width: auto;
