Add permalinks to inline threads.

--- a/lms/templates/discussion/mustache/_inline_thread_show.mustache
+++ b/lms/templates/discussion/mustache/_inline_thread_show.mustache
@@ -12,7 +12,7 @@
             {{/user}}
 
             <span class="timeago" title="{{created_at}}">{{created_at}}</span>
-
+            <span><a href="{{permalink}}">Permanent Link</a></span>
             <span class="post-status-closed top-post-status" style="display: none">
                 &bull; This thread is closed.
             </span>
