--- a/lms/static/sass/course/_tabs.scss
+++ b/lms/static/sass/course/_tabs.scss
@@ -1,6 +1,6 @@
 div.static_tab_wrapper {
-
   padding: 2em 2.5em;
+  @include box-sizing(border-box);
 
   h1 {
     @extend .top-header
@@ -9,5 +9,4 @@ div.static_tab_wrapper {
   section {
     margin: 0px 0px 20px;
   }
-
 }
