--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -73,25 +73,32 @@
             course_target = reverse('about_course', args=[course.id])
           %>
 
-          <a href="${course_target}">
-            <section class="cover" style="background-image: url('${course_image_url(course)}')">
-              <div class="shade"></div>
-              <div class="arrow">&#10095;</div>
-            </section>
+            <a href="${course_target}">
+              <section class="cover" style="background-image: url('${course_image_url(course)}')">
+                <div class="shade"></div>
+                <div class="arrow">&#10095;</div>
+              </section>
+            </a>
 
             <section class="info">
               <hgroup>
                 <h2 class="university">${get_course_about_section(course, 'university')}</h2>
-                <h3>${course.number} ${course.title}</h3>
+                <h3><a href="${course_target}">${course.number} ${course.title}</a></h3>
               </hgroup>
-              <section class="course-status">
-                <p>Class Starts - <span>${course.start_date_text}</span></p>
+              
+              <!-- add the "ended" class if the course has ended -->
+              <section class="course-status ended">
+                <p>Class Ended</p>
               </section>
+
+              <!-- insert the certificate button if the course has ended -->
+              <a href="#" class="download-certificate">Download Certificate</a>
+              
               % if course.id in show_courseware_links_for:
-                <p class="enter-course">View Courseware</p>
+                <a href="${course_target}" class="enter-course">View Courseware</a>
               % endif
             </section>
-          </a>
+          
         </article>
         <a href="#unenroll-modal" class="unenroll" rel="leanModal" data-course-id="${course.id}" data-course-number="${course.number}">Unregister</a>
 
