--- a/lms/templates/portal/index.html
+++ b/lms/templates/portal/index.html
@@ -1,7 +1,7 @@
 <%! from django.core.urlresolvers import reverse %>
 <%! from time import strftime %>
-<%inherit file="main.html" />
-<%namespace name='static' file='static_content.html'/>
+<%inherit file="../main.html" />
+<%namespace name='static' file='../static_content.html'/>
 
 <section class="home">
   <header>
@@ -87,17 +87,17 @@
       <section class="courses">
         <section class='university-column'>
           %for course in universities['MITx']:
-            <%include file="course.html" args="course=course" />
+            <%include file="/portal/course.html" args="course=course" />
           %endfor
         </section>
         <section class='university-column'>
           %for course in universities['HarvardX']:
-            <%include file="course.html" args="course=course" />
+            <%include file="/portal/course.html" args="course=course" />
           %endfor
         </section>
         <section class='university-column last'>
           %for course in universities['BerkeleyX']:
-            <%include file="course.html" args="course=course" />
+            <%include file="/portal/course.html" args="course=course" />
           %endfor
         </section>
       </section>
