--- a/lms/templates/portal/dashboard.html
+++ b/lms/templates/portal/dashboard.html
@@ -1,11 +1,12 @@
+## mako
 <%!
   from django.core.urlresolvers import reverse
   from courseware.courses import course_image_url, get_course_about_section
   from courseware.access import has_access
 %>
-<%inherit file="main.html" />
+<%inherit file="../main.html" />
 
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='../static_content.html'/>
 
 <%block name="title"><title>Dashboard</title></%block>
 
