More cleanup of templates directory.

--- a/lms/templates/courseware/staticbook.html
+++ b/lms/templates/courseware/staticbook.html
@@ -1,5 +1,6 @@
-<%inherit file="main.html" />
-<%namespace name='static' file='static_content.html'/>
+## mako
+<%inherit file="../main.html" />
+<%namespace name='static' file='../static_content.html'/>
 <%block name="title"><title>${course.number} Textbook</title></%block>
 
 <%block name="headextra">
