--- a/lms/templates/portal/courses.html
+++ b/lms/templates/portal/courses.html
@@ -19,7 +19,7 @@
 
   <section class="container">
     ## I'm removing this for now since we aren't using it for the fall.
-    ## <%include file="course_filter.html" />
+    ## <%include file="/portal/course_filter.html" />
     <section class="courses">
       <section class='university-column'>
         %for course in universities['MITx']:
