More template cleanup. Moved navigation, footer, etc to templates/frame.

--- a/lms/templates/frame/footer.html
+++ b/lms/templates/frame/footer.html
@@ -1,6 +1,6 @@
 ## mako
 <%! from django.core.urlresolvers import reverse %>
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='../static_content.html'/>
 
 <footer>
   <nav>
