--- a/lms/templates/frame/signup_modal.html
+++ b/lms/templates/frame/signup_modal.html
@@ -1,4 +1,4 @@
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='../static_content.html'/>
 <%! from django.core.urlresolvers import reverse %>
 <%! from django_countries.countries import COUNTRIES %>
 <%! from student.models import UserProfile %>
