More template cleanup. Moved openid template to extauth/.

--- a/lms/templates/courseware/news.html
+++ b/lms/templates/courseware/news.html
@@ -1,5 +1,5 @@
-<%inherit file="main.html" />
-<%namespace name='static' file='static_content.html'/>
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
 <%block name="bodyclass">courseware news</%block>
 <%block name="title"><title>News – MITx 6.002x</title></%block>
 
