Changed references to main.html and static_content.html to be absolute.

--- a/cms/templates/registration/activation_complete.html
+++ b/cms/templates/registration/activation_complete.html
@@ -1,7 +1,7 @@
 <%! from django.core.urlresolvers import reverse %>
 <%inherit file="../base.html" />
 
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <section class="container activation">
 
