--- a/lms/templates/courseware/courseware-error.html
+++ b/lms/templates/courseware/courseware-error.html
@@ -1,5 +1,5 @@
 <%inherit file="/main.html" />
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 <%block name="bodyclass">courseware</%block>
 <%block name="title"><title>Courseware – edX</title></%block>
 
