--- a/lms/templates/courseware/staticbook.html
+++ b/lms/templates/courseware/staticbook.html
@@ -1,6 +1,6 @@
 ## mako
-<%inherit file="../main.html" />
-<%namespace name='static' file='../static_content.html'/>
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
 <%block name="title"><title>${course.number} Textbook</title></%block>
 
 <%block name="headextra">
