--- a/lms/templates/discussion/single_thread.html
+++ b/lms/templates/discussion/single_thread.html
@@ -3,8 +3,8 @@
 <%! from django.core.urlresolvers import reverse %>
 <%! from courseware.access import has_access %>
 
-<%inherit file="../main.html" />
-<%namespace name='static' file='../static_content.html'/>
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
 <%block name="bodyclass">discussion</%block>
 <%block name="title"><title>Discussion – ${course.number}</title></%block>
 
