--- a/lms/templates/discussion/user_profile.html
+++ b/lms/templates/discussion/user_profile.html
@@ -1,7 +1,7 @@
 <%! from django.template.defaultfilters import escapejs %>
 
-<%inherit file="../main.html" />
-<%namespace name='static' file='../static_content.html'/>
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
 <%block name="bodyclass">discussion</%block>
 <%block name="title"><title>Discussion – ${course.number | h}</title></%block>
 
