--- a/lms/templates/frame/login_modal.html
+++ b/lms/templates/frame/login_modal.html
@@ -1,5 +1,5 @@
 <%! from django.core.urlresolvers import reverse %>
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <section id="login-modal" class="modal login-modal">
   <div class="inner-wrapper">
