--- a/lms/templates/portal/courses.html
+++ b/lms/templates/portal/courses.html
@@ -1,7 +1,7 @@
 ## mako
-<%inherit file="../main.html" />
+<%inherit file="/main.html" />
 
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <%block name="title"><title>Courses</title></%block>
 
