--- a/lms/templates/static_templates/honor.html
+++ b/lms/templates/static_templates/honor.html
@@ -1,8 +1,8 @@
-<%inherit file="../main.html" />
+<%inherit file="/main.html" />
 
 <%! from django.core.urlresolvers import reverse %>
 
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <%block name="title"><title>Honor Code</title></%block>
 
