--- a/lms/templates/static_templates/jobs.html
+++ b/lms/templates/static_templates/jobs.html
@@ -1,6 +1,6 @@
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
-<%inherit file="../main.html" />
+<%inherit file="/main.html" />
 
 <%block name="title"><title>Jobs</title></%block>
 
