--- a/lms/templates/static_templates/press_releases/Elsevier_collaborates_with_edX.html
+++ b/lms/templates/static_templates/press_releases/Elsevier_collaborates_with_edX.html
@@ -1,7 +1,7 @@
 <%! from django.core.urlresolvers import reverse %>
-<%inherit file="../../main.html" />
+<%inherit file="/main.html" />
 
-<%namespace name='static' file='../../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <%block name="title"><title>Elsevier collaborates with edX</title></%block>
 <div id="fb-root"></div>
