--- a/lms/templates/static_templates/server-overloaded.html
+++ b/lms/templates/static_templates/server-overloaded.html
@@ -1,4 +1,4 @@
-<%inherit file="../main.html" />
+<%inherit file="/main.html" />
 
 <section class="outside-app">
   <h1>Currently the <em>edX</em> servers are overloaded</h1>
