--- a/lms/templates/university_profile/base.html
+++ b/lms/templates/university_profile/base.html
@@ -1,5 +1,5 @@
-<%inherit file="../main.html" />
-<%namespace name='static' file='../static_content.html'/>
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
 
 <section class="find-courses">
   <%block name="university_header"/>
