--- a/lms/templates/university_profile/mitx.html
+++ b/lms/templates/university_profile/mitx.html
@@ -1,5 +1,5 @@
 <%inherit file="base.html" />
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <%block name="title"><title>MITx</title></%block>
 
