--- a/lms/templates/discussion/_js_head_dependencies.html
+++ b/lms/templates/discussion/_js_head_dependencies.html
@@ -1,4 +1,4 @@
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <script type="text/javascript" src="${static.url('js/split.js')}"></script>
 <script type="text/javascript" src="${static.url('js/jquery.ajaxfileupload.js')}"></script>
