--- a/lms/templates/frame/navigation.html
+++ b/lms/templates/frame/navigation.html
@@ -2,7 +2,7 @@
 ## TODO: Split this into two files, one for people who are authenticated, and
 ## one for people who aren't. Assume a Course object is passed to the former,
 ## instead of using settings.COURSE_TITLE
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 <%!
 from django.core.urlresolvers import reverse
 
