--- a/lms/templates/portal/course_about.html
+++ b/lms/templates/portal/course_about.html
@@ -3,9 +3,9 @@
   from courseware.courses import course_image_url, get_course_about_section
   from courseware.access import has_access
 %>
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
-<%inherit file="../main.html" />
+<%inherit file="/main.html" />
 
 <%block name="js_extra">
   % if not registered:
