--- a/lms/templates/portal/index.html
+++ b/lms/templates/portal/index.html
@@ -1,7 +1,7 @@
 <%! from django.core.urlresolvers import reverse %>
 <%! from time import strftime %>
-<%inherit file="../main.html" />
-<%namespace name='static' file='../static_content.html'/>
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
 
 <section class="home">
   <header>
