--- a/lms/templates/static_templates/about.html
+++ b/lms/templates/static_templates/about.html
@@ -1,7 +1,7 @@
 <%! from django.core.urlresolvers import reverse %>
-<%namespace name='static' file='../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
-<%inherit file="../main.html" />
+<%inherit file="/main.html" />
 
 <%block name="title"><title>About edX</title></%block>
 
