--- a/lms/templates/static_templates/press_releases/edX_announces_proctored_exam_testing.html
+++ b/lms/templates/static_templates/press_releases/edX_announces_proctored_exam_testing.html
@@ -1,7 +1,7 @@
 <%! from django.core.urlresolvers import reverse %>
-<%inherit file="../../main.html" />
+<%inherit file="/main.html" />
 
-<%namespace name='static' file='../../static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <%block name="title"><title>edX announces proctored exam testing</title></%block>
 <div id="fb-root"></div>
