--- a/lms/templates/static_templates/server-error.html
+++ b/lms/templates/static_templates/server-error.html
@@ -1,4 +1,4 @@
-<%inherit file="../main.html" />
+<%inherit file="/main.html" />
 
 <section class="outside-app">
   <h1>There has been a 500 error on the <em>edX</em> servers</h1>
