Fixed references to main.html and static_content.html in templates to be absolute instead of relative.

--- a/cms/templates/base.html
+++ b/cms/templates/base.html
@@ -1,4 +1,4 @@
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <!doctype html>
 <html>
