--- a/common/templates/courseware_vendor_js.html
+++ b/common/templates/courseware_vendor_js.html
@@ -1,4 +1,4 @@
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <script type="text/javascript" src="${static.url('js/vendor/jquery.min.js')}"></script>
 <script type="text/javascript" src="${static.url('js/vendor/jquery-ui.min.js')}"></script>
