--- a/common/templates/problem.html
+++ b/common/templates/problem.html
@@ -1,4 +1,4 @@
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 <h2 class="problem-header">
   ${ problem['name'] }
   % if problem['weight'] != 1 and problem['weight'] != None:
