--- a/lms/templates/extauth/provider_login.html
+++ b/lms/templates/extauth/provider_login.html
@@ -1,5 +1,5 @@
-<%inherit file="main.html" />
-<%namespace name='static' file='static_content.html'/>
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
 
 <%block name="headextra">
 <style type="text/css">
