--- a/lms/templates/portal/course.html
+++ b/lms/templates/portal/course.html
@@ -1,4 +1,4 @@
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 <%!
     from courseware.courses import course_image_url, get_course_about_section
 %>
