--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -1,4 +1,4 @@
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 <!DOCTYPE html>
 <html>
 <head>
