--- a/lms/templates/name_changes.html
+++ b/lms/templates/name_changes.html
@@ -1,4 +1,4 @@
-<%inherit file="main.html" />
+<%inherit file="/main.html" />
 <script>
 function name_confirm(id) {
   postJSON('/accept_name_change',{"id":id},
