--- a/lms/templates/portal/video_modal.html
+++ b/lms/templates/portal/video_modal.html
@@ -1,7 +1,7 @@
 <%! 
   from courseware.courses import get_course_about_section
 %>
-<%namespace name='static' file='static_content.html'/>
+<%namespace name='static' file='/static_content.html'/>
 
 <section id="video-modal" class="modal video-modal">
   <div class="inner-wrapper">
