--- a/cms/static/sass/_header.scss
+++ b/cms/static/sass/_header.scss
@@ -38,10 +38,6 @@ body.no-header {
 		@include active;
 	}
 
-	#import-tab {
-		@include box-shadow(1px 0 0 #787981 inset, -1px 0 0 #3d3e44 inset, 1px 0 0 #787981, -1px 0 0 #3d3e44);
-	}
-
 	.left {
 		width: 700px;
 	}
@@ -56,13 +52,69 @@ body.no-header {
 		line-height: 18px;
 	}
 
+	.user-menu {
+		float: right;
+		position: relative;
+
+		&:hover {
+			.username {
+				background: #fff;
+				border: 1px solid #2c2e33;
+				border-bottom: none;
+				color: $extraDarkGrey;
+			}
+
+			.user-drop {
+				display: block;
+			}
+		}
+	}
+
+	.user-drop {
+		display: none;
+		position: absolute;
+		top: 36px;
+		right: 0;
+		z-index: 999;
+		width: 170px;
+		border: 1px solid #2c2e33;
+		@include box-shadow(0 1px 1px rgba(0, 0, 0, 0.2), 0 -1px 0px rgba(255, 255, 255, 0.05) inset);
+		background: #fff;
+
+		a {
+			display: block;
+			width: 100%;
+			height: 37px;
+			@include box-sizing(border-box);
+			@include box-shadow(none);
+			color: $blue;
+
+			&:hover {
+				color: $orange;
+			}
+		}
+	}
+
 	a,
 	.username {
+		position: relative;
 		float: left;
 		display: inline-block;
 		height: 29px;
-		padding: 7px 15px 0;
+		padding: 7px 15px 0;		
 		color: #e4e6ee;
+	}
+
+	.username {
+		z-index: 1000;
+		border: 1px solid transparent;
+
+		.drop-arrow {
+			margin-left: 3px;
+			vertical-align: top;
+			font-size: 11px;
+			line-height: 19px;
+		}
 	}
 
 	.class-nav,
@@ -76,6 +128,30 @@ body.no-header {
 		&:hover {
 			background: rgba(255, 255, 255, .1);
 		}
+	}
+}
 
+.modal.password-modal {
+	width: 500px;
+	height: auto;
+	margin-left: -250px;
+	text-align: center;
+
+	h1 {
+		float: none;
+		margin: 0 0 30px;
+		font-size: 34px;
+		font-weight: 300;
+	}
+
+	.modal-body {
+		overflow: hidden;
+		height: auto;
+	}
+
+	.close-button {
+		position: absolute;
+		top: 5px;
+		right: 5px;
 	}
 }
