--- a/cms/static/sass/_modal.scss
+++ b/cms/static/sass/_modal.scss
@@ -53,7 +53,7 @@
 	.close-button {
 		@include white-button;
 		position: absolute;
-		top: 0;
+		top: 15px;
 		right: 15px;
 		width: 29px;
 		height: 29px;
