git merge master

--- a/lms/templates/discussion/_underscore_templates.html
+++ b/lms/templates/discussion/_underscore_templates.html
@@ -60,11 +60,11 @@
       </header>
 
       <div class="post-body">${'<%- body %>'}</div>
-      ${'<% if (obj.courseware_url) { %>'}
+      ${"<% if (obj.courseware_url) { %>"}
       <div class="post-context">
           (this post is about <a href="${'<%- obj.courseware_url%>'}">${'<%- obj.courseware_title %>'}</a>)
       </div>
-      ${'<% } %>'}
+      ${"<% } %>"}
 
       <ul class="moderator-actions">
           <li style="display: none"><a class="action-edit" href="javascript:void(0)"><span class="edit-icon"></span> Edit</a></li>
