Add vertical-markup changes.

--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -3,6 +3,7 @@ h2 {
   margin-bottom: 15px;
 
   &.problem-header {
+    display: inline-block;
     section.staff {
       margin-top: 30px;
       font-size: 80%;
@@ -18,6 +19,10 @@ h2 {
 
 .inline-error {
   color: darken($error-red, 10%);
+}
+
+section.problem-progress {
+  display: inline-block
 }
 
 section.problem {
