--- a/lms/templates/jasmine/base.html
+++ b/lms/templates/jasmine/base.html
@@ -21,6 +21,7 @@
     {# static files #}
     {% compressed_js 'application' %}
     {% compressed_js 'module-js' %}
+    {% compressed_js 'courseware' %}
 
     {# spec files #}
     {% compressed_js 'spec' %}
