Added a 'find collaborators' xmodule mockup.

--- a/lms/static/sass/_collaborate.scss
+++ b/lms/static/sass/_collaborate.scss
@@ -36,7 +36,7 @@
 		display: block;
 		height: 22px;
 	    border-radius: 3px;
-		background-color: #10242E;		
+		background-color: #064666;		
 		color: #fff;
 		margin: -10px 10px;
 	    padding: 12px 15px 0px;
