--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -7,7 +7,8 @@
   <link rel="icon" type="image/x-icon" href="${static.url('images/favicon.ico')}" />
 
   <%static:css group='application'/>
-
+  
+  <script src="http://127.0.0.1:3000/socket.io/socket.io.js"></script>
   <%static:js group='main_vendor'/>
   <%block name="headextra"/>
 
